--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -24,7 +24,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile "com.android.support:cardview-v7:$rootProject.support_version"
+    compile "com.android.support:design:$rootProject.support_version"
+    compile "com.android.support:recyclerview-v7:$rootProject.support_version"
+
+    compile 'org.parceler:parceler-api:1.1.9'
+    annotationProcessor 'org.parceler:parceler:1.1.9'
+
     testCompile 'junit:junit:4.12'
 }
