--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.jakewharton.butterknife'
+
 
 android {
     compileSdkVersion 26
@@ -32,6 +34,14 @@ dependencies {
 
     compile 'org.parceler:parceler-api:1.1.9'
     annotationProcessor 'org.parceler:parceler:1.1.9'
+
+    compile 'com.jakewharton:butterknife:8.7.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+
+
+
 
     testCompile 'junit:junit:4.12'
 }
