--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'me.tatarka.retrolambda'
-
-
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 26
@@ -52,6 +51,7 @@ dependencies {
 
     compile "com.nex3z:flow-layout:$rootProject.flowlayout_version"
     compile "com.xiaofeng.android:flowlayoutmanager:$rootProject.flowlayoutmanager_version"
+    compile "io.realm:android-adapters:$rootProject.realm_adapter_version"
 
 
 
