Add github OAuth

--- a/WingDroid/app/src/main/AndroidManifest.xml
+++ b/WingDroid/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         <activity
             android:name=".ui.MainActivity"
             android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+        <activity android:name=".ui.detail.RepositoryDetailActivity" />
+        <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.detail.RepositoryDetailActivity" />
+        <activity android:name=".ui.login.GithubActivity"/>
     </application>
 
 
