--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -53,7 +53,20 @@ dependencies {
     compile "com.xiaofeng.android:flowlayoutmanager:$rootProject.flowlayoutmanager_version"
     compile "io.realm:android-adapters:$rootProject.realm_adapter_version"
 
+    compile "com.google.firebase:firebase-auth:$rootProject.firebase_auth_version"
+    compile "com.google.firebase:firebase-database:$rootProject.firebase_database_version"
+
+    compile "com.squareup.retrofit2:retrofit:$rootProject.retrofit_version"
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofit_gson_version"
+
+    compile "com.google.firebase:firebase-crash:$rootProject.firebase_crash_version"
+
+    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
 
 
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
