--- a/WingDroid/build.gradle
+++ b/WingDroid/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.6.0'
         classpath 'me.tatarka:gradle-retrolambda:3.2.2'
         classpath "io.realm:realm-gradle-plugin:3.5.0"
+        classpath 'com.google.gms:google-services:3.1.0'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -41,5 +42,10 @@ ext {
     flowlayout_version = '1.10@aar'
     flowlayoutmanager_version = '1.2.3.2'
     realm_adapter_version = '2.1.0'
+    firebase_auth_version = '10.0.1'
+    firebase_crash_version = '10.0.1'
+    firebase_database_version = '10.0.1'
+    retrofit_version = '2.3.0'
+    retrofit_gson_version = '2.1.0'
 
 }
