--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 26
@@ -13,6 +12,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+
     }
     buildTypes {
         release {
@@ -32,7 +33,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
     compile 'com.android.support:appcompat-v7:26.+'
     compile "com.android.support:cardview-v7:$rootProject.support_version"
     compile "com.android.support:design:$rootProject.support_version"
@@ -51,20 +51,20 @@ dependencies {
 
     compile "org.apmem.tools:layouts:$rootProject.flowlayout_version"
     compile "com.xiaofeng.android:flowlayoutmanager:$rootProject.flowlayoutmanager_version"
-    compile "io.realm:android-adapters:$rootProject.realm_adapter_version"
 
     compile "com.google.firebase:firebase-auth:$rootProject.firebase_auth_version"
     compile "com.google.firebase:firebase-database:$rootProject.firebase_database_version"
 
     compile "com.squareup.retrofit2:retrofit:$rootProject.retrofit_version"
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    compile "com.squareup.retrofit2:adapter-rxjava2:$rootProject.rxjava2_adapter_version"
     compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofit_gson_version"
 
     compile "com.google.firebase:firebase-crash:$rootProject.firebase_crash_version"
+    compile "com.firebaseui:firebase-ui-database:$rootProject.firebase_ui_database_version"
 
-    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-    compile 'com.squareup.okhttp3:okhttp:3.4.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
+    compile "com.facebook.stetho:stetho-okhttp3:$rootProject.stetho_okhttp3_version"
+    compile "com.squareup.okhttp3:okhttp:$rootProject.okhttp3_version"
+    compile "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp3_logging_interceptor"
 
 
     testCompile 'junit:junit:4.12'
