--- a/WingDroid/app/src/main/AndroidManifest.xml
+++ b/WingDroid/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.login.GithubActivity"/>
+        <activity android:name=".ui.detail.WebViewAcitivty"/>
     </application>
 
 
