--- a/WingDroid/app/src/main/AndroidManifest.xml
+++ b/WingDroid/app/src/main/AndroidManifest.xml
@@ -27,6 +27,17 @@
         <activity android:name=".ui.login.GithubActivity"/>
         <activity android:name=".ui.detail.WebViewAcitivty"/>
         <activity android:name=".ui.search.SearchResultActivity"/>
+        <service android:name=".fcm.WingDroidFCMService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service android:name=".fcm.WingDroidFCMInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 
