--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.example.choijinjoo.wingdroid"
         minSdkVersion 19
@@ -33,7 +33,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:25.+'
     compile "com.android.support:cardview-v7:$rootProject.support_version"
     compile "com.android.support:design:$rootProject.support_version"
     compile "com.android.support:recyclerview-v7:$rootProject.support_version"
@@ -68,6 +68,7 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:$rootProject.okhttp3_version"
     compile "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp3_logging_interceptor"
 
+    compile 'com.j256.ormlite:ormlite-android:5.0'
 
 
     testCompile 'junit:junit:4.12'
