--- a/WingDroid/app/src/main/AndroidManifest.xml
+++ b/WingDroid/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:name=".WingDroidApp"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
@@ -14,31 +14,34 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.MainActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden">
-        </activity>
+            android:windowSoftInputMode="adjustPan|stateHidden"></activity>
         <activity android:name=".ui.detail.RepositoryDetailActivity" />
-        <activity android:name=".ui.login.LoginActivity">
+        <activity android:name=".ui.begin.LoginActivity">
+
+        </activity>
+        <activity android:name=".ui.begin.GithubActivity" />
+        <activity android:name=".ui.detail.WebViewAcitivty" />
+        <activity android:name=".ui.search.SearchResultActivity" />
+        <activity android:name=".ui.begin.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.login.GithubActivity"/>
-        <activity android:name=".ui.detail.WebViewAcitivty"/>
-        <activity android:name=".ui.search.SearchResultActivity"/>
+
         <service android:name=".fcm.WingDroidFCMService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
         <service android:name=".fcm.WingDroidFCMInstanceIdService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-    </application>
 
+        <service android:name=".service.FirebaseDataSyncService" />
+    </application>
 
 </manifest>
