--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -71,6 +71,12 @@ dependencies {
     compile "com.j256.ormlite:ormlite-android:$rootProject.ormlite_version"
 
 
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
