--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.athkalia.emphasis:emphasis:0.4'
 
 
     testCompile 'junit:junit:4.12'
