--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support:appcompat-v7:25.4.0'
     compile "com.android.support:cardview-v7:$rootProject.support_version"
     compile "com.android.support:design:$rootProject.support_version"
     compile "com.android.support:recyclerview-v7:$rootProject.support_version"
@@ -77,6 +77,11 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.athkalia.emphasis:emphasis:0.4'
 
+
+
+    //  simulate libs
+
+    compile 'com.airbnb.android:lottie:2.2.0'
 
 
     testCompile 'junit:junit:4.12'
