--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.athkalia.emphasis:emphasis:0.4'
 
+    compile 'com.github.Commit451:ElasticDragDismissLayout:1.0.4'
+
+
 
 
     //  simulate libs
