--- a/WingDroid/app/build.gradle
+++ b/WingDroid/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.butterknife'
-apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'io.objectbox'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.example.choijinjoo.wingdroid"
-        minSdkVersion 21
-        targetSdkVersion 25
+        minSdkVersion 19
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,60 +33,49 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile "com.android.support:cardview-v7:$rootProject.support_version"
-    compile "com.android.support:design:$rootProject.support_version"
-    compile "com.android.support:recyclerview-v7:$rootProject.support_version"
-    compile "com.android.support:palette-v7:$rootProject.support_version"
+    implementation "com.android.support:appcompat-v7:$rootProject.supportVersion"
+    implementation "com.android.support:cardview-v7:$rootProject.supportVersion"
+    implementation "com.android.support:design:$rootProject.supportVersion"
+    implementation "com.android.support:recyclerview-v7:$rootProject.supportVersion"
+    implementation "com.android.support:palette-v7:$rootProject.supportVersion"
 
-    compile "org.parceler:parceler-api:$rootProject.parceler_version"
-    annotationProcessor "org.parceler:parceler:$rootProject.parceler_version"
+    implementation "org.parceler:parceler-api:$rootProject.parcelerVersion"
+    annotationProcessor "org.parceler:parceler:$rootProject.parcelerVersion"
+    implementation "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterknifeCompilerVersion"
 
-    compile "com.jakewharton:butterknife:$rootProject.butterknife_version"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterknife_compiler_version"
+    implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
 
-    compile "com.github.bumptech.glide:glide:$rootProject.glide_version"
-    compile "com.jakewharton.rxbinding2:rxbinding:$rootProject.rxbinding_version"
-    compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroid_version"
+    implementation "com.jakewharton.rxbinding2:rxbinding:$rootProject.rxbindingVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
+    implementation "org.greenrobot:eventbus:$rootProject.eventbusVersion"
 
-    compile "org.apmem.tools:layouts:$rootProject.flowlayout_version"
-    compile "com.xiaofeng.android:flowlayoutmanager:$rootProject.flowlayoutmanager_version"
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.rxjava2AdapterVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitGsonVersion"
 
+    implementation "com.facebook.stetho:stetho-okhttp3:$rootProject.stethoOkhttp3Version"
+    implementation "com.squareup.okhttp3:okhttp:$rootProject.okhttp3Version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp3LoggingInterceptorVersion"
 
-    compile "com.squareup.retrofit2:retrofit:$rootProject.retrofit_version"
-    compile "com.squareup.retrofit2:adapter-rxjava2:$rootProject.rxjava2_adapter_version"
-    compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofit_gson_version"
+    implementation "com.google.firebase:firebase-auth:$rootProject.firebaseAuthVersion"
+    implementation "com.google.firebase:firebase-database:$rootProject.firebaseDatabaseVersion"
+    implementation "com.google.firebase:firebase-crash:$rootProject.firebaseCrashVersion"
+    implementation "com.firebaseui:firebase-ui-database:$rootProject.firebaseUiDatabaseVersion"
+    implementation "com.google.firebase:firebase-messaging:$rootProject.firebaseMessagingVersion"
 
-    compile "com.google.firebase:firebase-auth:$rootProject.firebase_auth_version"
-    compile "com.google.firebase:firebase-database:$rootProject.firebase_database_version"
-    compile "com.google.firebase:firebase-crash:$rootProject.firebase_crash_version"
-    compile "com.firebaseui:firebase-ui-database:$rootProject.firebase_ui_database_version"
-    compile "com.google.firebase:firebase-messaging:$rootProject.firebase_messaging_version"
+    implementation "com.j256.ormlite:ormlite-android:$rootProject.ormliteVersion"
 
+    implementation "org.apmem.tools:layouts:$rootProject.flowlayoutVersion"
+    implementation "com.xiaofeng.android:flowlayoutmanager:$rootProject.flowlayoutmanagerVersion"
+    implementation "com.athkalia.emphasis:emphasis:$rootProject.emphasisVersion"
 
-    compile "com.facebook.stetho:stetho-okhttp3:$rootProject.stetho_okhttp3_version"
-    compile "com.squareup.okhttp3:okhttp:$rootProject.okhttp3_version"
-    compile "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp3_logging_interceptor"
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 
-    compile "com.j256.ormlite:ormlite-android:$rootProject.ormlite_version"
-
-
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
-
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.athkalia.emphasis:emphasis:0.4'
-
-    compile 'com.github.Commit451:ElasticDragDismissLayout:1.0.4'
+    implementation 'com.airbnb.android:lottie:2.2.0'
 
 
-
-
-    //  simulate libs
-
-    compile 'com.airbnb.android:lottie:2.2.0'
-
-
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
